@@ -51,6 +51,11 @@ CHANGES - Current Version:
   beginning of an index node (changing this node's key) then the parent was 
   not properly updated and some records were not queriable through that index.
 
+- Handle '\t' just like a space when parsing mif files.
+
+- Fixed MIFFile::GotoFeature() to avoid calling ResetReading() before moving 
+  forward.
+
 
 Version 1.0.3 - (2000-10-19)
 ----------------------------
@@ -223,5 +228,5 @@ Version 0.1 - (1999-12-04)
 
 
 ------------
-$Id: HISTORY.TXT,v 1.33 2000-11-13 22:30:03 daniel Exp $
+$Id: HISTORY.TXT,v 1.34 2000-11-14 06:16:48 daniel Exp $
 ------------
